--- a/lisn/src/main/res/values/strings.xml
+++ b/lisn/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="title_store">Store</string>
     <string name="title_my_book">My Book</string>
     <string name="title_settings">Settings</string>
+    <string name="title_player">Player</string>
     <string name="preference_file_key">audio.lisn.PREFERENCE_FILE_KEY</string>
     <string name="language">audio.lisn.LANGUAGE_KEY</string>
     <string name="facebook_app_id">375105278899</string>
