--- a/lisn/src/main/res/values/strings.xml
+++ b/lisn/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_feedback">Feedback</string>
     <string name="action_quick_tour">Quick Tour</string>
-    <string name="action_share">Share</string>
+    <string name="action_about_us">About Us</string>
     
     <string-array name="navigation_section">
         <item>Best sellers</item>
